[gd_scene load_steps=4 format=3 uid="uid://dq5keub5rdyqu"]

[ext_resource type="Script" path="res://ui/ui.gd" id="1_mpobn"]
[ext_resource type="PackedScene" uid="uid://bqovgipben058" path="res://ui/countdown_panel.tscn" id="2_2om60"]
[ext_resource type="Texture2D" uid="uid://b8bxkijwgy5jv" path="res://icon.svg" id="3_7aq1v"]

[node name="UI" type="Control"]
process_mode = 3
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_mpobn")

[node name="CountdownPanel" parent="." instance=ExtResource("2_2om60")]
visible = false
layout_mode = 1

[node name="GameEndLabel" type="Label" parent="."]
visible = false
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -0.5
offset_top = -142.5
offset_right = 0.5
offset_bottom = -119.5
grow_horizontal = 2
grow_vertical = 2
theme_override_font_sizes/font_size = 55
text = "Game Over"
horizontal_alignment = 1

[node name="PauseLabel" type="Label" parent="."]
visible = false
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -182.5
offset_top = -39.5
offset_right = 182.5
offset_bottom = 39.5
grow_horizontal = 2
grow_vertical = 2
theme_override_colors/font_color = Color(0.627451, 0.12549, 0.941176, 1)
theme_override_font_sizes/font_size = 55
text = "Game Paused"
horizontal_alignment = 1

[node name="HBoxContainer" type="HBoxContainer" parent="."]
layout_mode = 1
offset_left = 30.0
offset_right = 163.0
offset_bottom = 94.0

[node name="ScoreLabel" type="Label" parent="HBoxContainer"]
layout_mode = 2
size_flags_vertical = 0
theme_override_font_sizes/font_size = 30
text = "SCORE: "

[node name="CurrentScore" type="Label" parent="HBoxContainer"]
layout_mode = 2
size_flags_vertical = 0
theme_override_font_sizes/font_size = 30
text = "0"

[node name="HBoxContainer2" type="HBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -278.0
offset_right = -68.0
offset_bottom = 94.0
grow_horizontal = 0

[node name="HighScoreLabel" type="Label" parent="HBoxContainer2"]
layout_mode = 2
size_flags_vertical = 0
theme_override_colors/font_color = Color(1, 0.843137, 0, 1)
theme_override_font_sizes/font_size = 30
text = "HIGH SCORE:"

[node name="HighScore" type="Label" parent="HBoxContainer2"]
layout_mode = 2
size_flags_vertical = 0
theme_override_colors/font_color = Color(1, 0.843137, 0, 1)
theme_override_font_sizes/font_size = 30
text = "0"

[node name="Life1" type="TextureRect" parent="."]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -70.0
offset_right = -30.0
offset_bottom = 40.0
grow_horizontal = 2
texture = ExtResource("3_7aq1v")
expand_mode = 1

[node name="Life2" type="TextureRect" parent="."]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -20.0
offset_right = 20.0
offset_bottom = 40.0
grow_horizontal = 2
texture = ExtResource("3_7aq1v")
expand_mode = 1

[node name="Life3" type="TextureRect" parent="."]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = 30.0
offset_right = 70.0
offset_bottom = 40.0
grow_horizontal = 2
texture = ExtResource("3_7aq1v")
expand_mode = 1

[connection signal="countdown_over" from="CountdownPanel" to="." method="_on_countdown_panel_countdown_over"]
